terraform/vpc/module/vpc/main.tf
resource aws_vpc "vpc" {
    cidr_block = var.aws_cidr
    enable_dns_hostnames = true
    enable_dns_support = true
    tags = merge(var.tags,{name="${var.enviroment_name}-vpc"})
    lifecycle {
      prevent_destroy = false
    }
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.vpc.id
    tags = merge(var.tags,{name="${var.enviroment_name}-igw"})
}

resource "aws_subnet" "public" {
    for_each = {for k, az in local.azs: az=>local.public_subnets[k]}
    vpc_id = aws_vpc.vpc.id
    cidr_block = each.value
    availability_zone = each.key
    map_public_ip_on_launch = true
    tags = merge(var.tags,{
        name="${var.enviroment_name}-subnet-${each.key}"
    })
}

resource "aws_subnet" "private" {
    for_each = {for k, az in local.azs: az=>local.private_subnets[k]}
    vpc_id = aws_vpc.vpc.id
    cidr_block = each.value
    availability_zone = each.key
    map_public_ip_on_launch = true
    tags = merge(var.tags,{
        name="${var.enviroment_name}-subnet-${each.key}"
    })
}
resource "aws_eip" "nat_eip" {
    tags = merge(var.tags,{
        name="${var.enviroment_name}-nat-eip"
    })
}
resource "aws_nat_gateway" "nat" {
    allocation_id = aws_eip.nat_eip.id
    subnet_id = values(aws_subnet.public)[0].id
    tags = merge(var.tags,{
        name="${var.enviroment_name}-nat"
    })
    depends_on = [ aws_internet_gateway.igw ]
}
resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.vpc.id
    route{
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
    tags = merge(var.tags,{name="${var.enviroment_name}-public-rt"})
}
resource "aws_route_table" "private_rt" {
    vpc_id = aws_vpc.vpc.id
    route{
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_nat_gateway.nat.id
    }
    tags = merge(var.tags,{name="${var.enviroment_name}-public-rt"})
}
resource "aws_route_table_association" "public_rt_assoc" {
  for_each = aws_subnet.public
  subnet_id      = each.value.id
  route_table_id = aws_route_table.public_rt.id
}
resource "aws_route_table_association" "private_rt_assoc" {
  for_each = aws_subnet.private
  subnet_id      = each.value.id
  route_table_id = aws_route_table.private_rt.id
}
